--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upsolve",
+  "name": "upsolve-tracker",
   "productName": "UpSolve",
   "version": "1.0.0",
   "description": "Plataforma de gestão de questões para programação competitiva",
@@ -64,6 +64,8 @@
     "@monaco-editor/react": "^4.7.0",
     "@uiw/react-md-editor": "^4.0.11",
     "date-fns": "^4.1.0",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "6.0.1",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -71,8 +73,7 @@
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
     "uuid": "^13.0.0",
-    "zustand": "^5.0.10",
-    "electron-squirrel-startup": "^1.0.1"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
