feat(branding): add custom app icon for Windows/Mac/Linux builds

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
           ]
         }
       ],
-      "icon": "public/icon.png"
+      "icon": "public/icon.ico"
     },
     "nsis": {
       "oneClick": false,
@@ -51,13 +51,13 @@
       "target": [
         "dmg"
       ],
-      "icon": "public/icon.png"
+      "icon": "public/icon.ico"
     },
     "linux": {
       "target": [
         "AppImage"
       ],
-      "icon": "public/icon.png"
+      "icon": "public/icon.ico"
     }
   },
   "dependencies": {
